Publish inventory unlock

--- a/Fanatics/dev/Foundation/properties/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/customer_overrides.properties
@@ -30,3 +30,5 @@ yfs.LocationFeed.SubServiceName=LocationFeed_0
 #Item Feed
 yfs.ManageItem.Queue=MANAGE_ITEM_QUEUE
 yfs.ManageItem.SubServiceName=ManageItem_0
+#Publish inventory unlock
+yfs.PublishInvUnlock.Queue=PUBLISH_INV_UNLOCK_QUEUE
