Adjust Inventory and publish inv fix

--- a/Fanatics/dev/Foundation/properties/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/customer_overrides.properties
@@ -32,3 +32,6 @@ yfs.ManageItem.Queue=MANAGE_ITEM_QUEUE
 yfs.ManageItem.SubServiceName=ManageItem_0
 #Publish inventory unlock
 yfs.PublishInvUnlock.Queue=PUBLISH_INV_UNLOCK_QUEUE
+#Adjust Inventory Feed
+yfs.AdjustInventory.Queue=ADJUST_INVENTORY_QUEUE
+yfs.AdjustInventory.SubServiceName=AdjustInventory_0
