Full sync properties

--- a/Fanatics/dev/Foundation/properties/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/customer_overrides.properties
@@ -26,12 +26,23 @@ xapirest.servlet.realm="WELCOME"
 
 #Vendor Location Feed
 yfs.LocationFeed.Queue=LOCATION_FEED_QUEUE
-yfs.LocationFeed.SubServiceName=LocationFeed_0
 #Item Feed
 yfs.ManageItem.Queue=MANAGE_ITEM_QUEUE
-yfs.ManageItem.SubServiceName=ManageItem_0
 #Publish inventory unlock
 yfs.PublishInvUnlock.Queue=PUBLISH_INV_UNLOCK_QUEUE
 #Adjust Inventory Feed
 yfs.AdjustInventory.Queue=ADJUST_INVENTORY_QUEUE
+#Inventory Full Sync
+yfs.LoadInvMismatch.Queue=LOAD_INV_MISMATCH_QUEUE
+#Adjust Inventory Full Sync
+yfs.AdjustInventoryFullSync.Queue=ADJUST_INVENTORY_FULL_SYNC_QUEUE
+
+
+#
+# SUB SERVICES
+#
+yfs.LocationFeed.SubServiceName=LocationFeed_0
+yfs.ManageItem.SubServiceName=ManageItem_0
 yfs.AdjustInventory.SubServiceName=AdjustInventory_0
+yfs.LoadInvMismatch.SubServiceName=LoadInvMismatch_0
+yfs.AdjustInventoryFullSync.SubServiceName=AdjustInventoryFullSync_0
