Item feed extn, RTAM and create order q

--- a/Fanatics/dev/Foundation/properties/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/customer_overrides.properties
@@ -36,7 +36,11 @@ yfs.AdjustInventory.Queue=ADJUST_INVENTORY_QUEUE
 yfs.LoadInvMismatch.Queue=LOAD_INV_MISMATCH_QUEUE
 #Adjust Inventory Full Sync
 yfs.AdjustInventoryFullSync.Queue=ADJUST_INVENTORY_FULL_SYNC_QUEUE
-
+#Create Order
+yfs.CreateOrder.Queue=CREATE_ORDER_QUEUE
+#RTAM
+yfs.RTAMInternal.Queue=RTAM_INTERNAL_QUEUE
+yfs.RTAMPublish.Queue=RTAM_PUBLISH_QUEUE
 
 #
 # SUB SERVICES
@@ -46,3 +50,4 @@ yfs.ManageItem.SubServiceName=ManageItem_0
 yfs.AdjustInventory.SubServiceName=AdjustInventory_0
 yfs.LoadInvMismatch.SubServiceName=LoadInvMismatch_0
 yfs.AdjustInventoryFullSync.SubServiceName=AdjustInventoryFullSync_0
+yfs.CreateOrder.SubServiceName=CreateOrder_0
