queue config changes

--- a/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
@@ -2,49 +2,48 @@
 yfs.httpOnlyCookie=false
 yfs.api.security.enabled=Y
 
-yfs.yfs.searchIndex.rootDirectory=/opt/ibm/sterling/oms/data
+yfs.yfs.searchIndex.rootDirectory=/opt/IBM/OMS/Sterling94/data
 
-#
-#Queues
-#
-yfs.jms.session.disable.pooling=Y
+# REST SERVICE settings
 
-#Websphere MQ
-yfs.IntegrationServer.ProviderURL=file:/opt/IBM/OMS/Sterling94/JMSBind
-yfs.IntegrationServer.QCF=OMSConnFactory
-
-yfs.WMQ.USERID=
-yfs.WMQ.PASSWORD=
-
-# ENABLE REST SERVICE
 xapirest.servlet.authstyle=BASIC
 xapirest.servlet.realm="WELCOME"
+
+#
+# Queue Seetings
+
+yfs.jms.session.disable.pooling=Y
+yfs.IntegrationServer.ProviderURL=file:/opt/IBM/OMS
+yfs.IntegrationServer.QCF=FA_OMS_DEV_01
+
 
 #
 # OMS QUEUES
 #
 
 #Vendor Location Feed
-yfs.LocationFeed.Queue=FAN_OMS_IN_LOCATION_FEED
+yfs.LocationFeed.Queue=STROMS_VENDOR_FEED_IN
 #Item Feed
-yfs.ManageItem.Queue=FAN_OMS_IN_ITEM_FEED
+yfs.ManageItem.Queue=STROMS_ITEM_UPLOAD_IN
 #Publish inventory unlock
-yfs.PublishInvUnlock.Queue=FAN_OMS_OUT_INV_UNLOCK_PUBLISH
+yfs.PublishInvUnlock.Queue=STROMS_INV_UNLOCK_PUBLISH_OUT
 #Adjust Inventory Feed
-yfs.AdjustInventory.Queue=FAN_OMS_IN_INV_DELTA_FEED
+yfs.AdjustInventory.Queue=STROMS_INVADJUST_IN
 #Inventory Full Sync
-yfs.LoadInvMismatch.Queue=FAN_OMS_IN_INV_FULL_SYNC_FEED
+yfs.LoadInvMismatch.Queue=STROMS_FULL_INVENTORY_SYNC_IN
 #Adjust Inventory Full Sync
-yfs.AdjustInventoryFullSync.Queue=FAN_ADJ_INV_INTERNAL
+yfs.AdjustInventoryFullSync.Queue=STROMS_ADJ_INV_FULL_SYNC_INTERNAL
 #Create Order
-yfs.CreateOrder.Queue=FAN_OMS_IN_CREATE_ORDER_FEED
+yfs.CreateOrder.Queue=STROMS_CREATE_ORDER_IN
 #RTAM
-yfs.RTAMInternal.Queue=FAN_RTAM_INTERNAL
-yfs.RTAMPublish.Queue=FAN_OMS_OUT_INV_RTAM_PUBLISH
+yfs.RTAMInternal.Op1.Queue=STROMS_RTAMSYNC_OP1_AGENT
+yfs.RTAMInternal.Op3.Queue=STROMS_RTAMSYNC_OP3_AGENT
+yfs.RTAMPublish.Queue=STROMS_RTAM_INV_UPDATES_OUT
 
 #
 # SUB SERVICES
 #
+
 yfs.LocationFeed.SubServiceName=LocationFeed_0
 yfs.ManageItem.SubServiceName=ManageItem_0
 yfs.AdjustInventory.SubServiceName=AdjustInventory_0
