This update contains Create order new requirement Order Release component DB extensions, templates for both xsl translator for Order release and customer overrides update

--- a/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
@@ -39,6 +39,10 @@ yfs.CreateOrder.Queue=STROMS_CREATE_ORDER_IN
 yfs.RTAMInternal.Op1.Queue=STROMS_RTAMSYNC_OP1_AGENT
 yfs.RTAMInternal.Op3.Queue=STROMS_RTAMSYNC_OP3_AGENT
 yfs.RTAMPublish.Queue=STROMS_RTAM_INV_UPDATES_OUT
+#Order release
+yfs.ReleasedToWMS.Queue=STROMS_RELEASE_ORDER
+yfs.ScheduleAgentInternal.Queue=STROMS_SCHEDULE_INTERNAL
+yfs.ReleaseAgentInternal.Queue=STROMS_RELEASE_INTERNAL
 
 #
 # SUB SERVICES
