--- a/Fanatics/dev/Foundation/properties/local/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/local/customer_overrides.properties
@@ -41,6 +41,10 @@ yfs.CreateOrder.Queue=CREATE_ORDER_QUEUE
 #RTAM
 yfs.RTAMInternal.Queue=RTAM_INTERNAL_QUEUE
 yfs.RTAMPublish.Queue=RTAM_PUBLISH_QUEUE
+#Order release
+yfs.ReleasedToWMS.Queue=FANATICS_RELEASE_ORDER
+yfs.ScheduleAgentInternal.Queue=FANATICS_SCHEDULE_INTERNAL
+yfs.ReleaseAgentInternal.Queue=FANATICS_RELEASE_INTERNAL
 
 #
 # SUB SERVICES
