Neeraj queue properties

--- a/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
@@ -44,6 +44,12 @@ yfs.ReleasedToWMS.Queue=STROMS_RELEASE_ORDER
 yfs.ScheduleAgentInternal.Queue=STROMS_SCHEDULE_INTERNAL
 yfs.ReleaseAgentInternal.Queue=STROMS_RELEASE_INTERNAL
 
+yfs.FanaticsFraudCheck.Queue=FanaticsFraudCheck.Queue
+yfs.OrderReleaseUpdate.Queue=OrderReleaseUpdate.Queue
+yfs.ConfirmShipment.Queue=ConfirmShipment.Queue
+
+
+
 #
 # SUB SERVICES
 #
@@ -54,3 +60,5 @@ yfs.AdjustInventory.SubServiceName=AdjustInventory_0
 yfs.LoadInvMismatch.SubServiceName=LoadInvMismatch_0
 yfs.AdjustInventoryFullSync.SubServiceName=AdjustInventoryFullSync_0
 yfs.CreateOrder.SubServiceName=CreateOrder_0
+yfs.OrderReleaseUpdate.SubServiceName=OrderReleaseUpdate_0
+yfs.ConfirmShipment.SubServiceName=ConfirmShipment_0
