Queue changes and fraud

--- a/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
+++ b/Fanatics/dev/Foundation/properties/dev/customer_overrides.properties
@@ -41,12 +41,14 @@ yfs.RTAMInternal.Op3.Queue=STROMS_RTAMSYNC_OP3_AGENT
 yfs.RTAMPublish.Queue=STROMS_RTAM_INV_UPDATES_OUT
 #Order release
 yfs.ReleasedToWMS.Queue=STROMS_RELEASE_ORDER
-yfs.ScheduleAgentInternal.Queue=STROMS_SCHEDULE_INTERNAL
-yfs.ReleaseAgentInternal.Queue=STROMS_RELEASE_INTERNAL
 
-yfs.FanaticsFraudCheck.Queue=FanaticsFraudCheck.Queue
-yfs.OrderReleaseUpdate.Queue=OrderReleaseUpdate.Queue
-yfs.ConfirmShipment.Queue=ConfirmShipment.Queue
+yfs.ScheduleAgentInternal.Queue=STROMS_SCHEDULE_ORDER_AGENT
+yfs.ReleaseAgentInternal.Queue=STROMS_RELEASE_ORDER_AGENT
+
+yfs.FanaticsFraudCheck.Queue=STROMS_FRAUD_CHECK_AGENT
+yfs.OrderReleaseUpdate.Queue=STROMS_SENT_RELEASE_ORDER_OUT
+yfs.ConfirmShipment.Queue=STROMS_CONFIRM_SHIPMENT_IN
+yfs.FanaticsFraudResponse.Queue=STROMS_FRAUD_CHECK_RESP_IN
 
 
 
@@ -62,3 +64,4 @@ yfs.AdjustInventoryFullSync.SubServiceName=AdjustInventoryFullSync_0
 yfs.CreateOrder.SubServiceName=CreateOrder_0
 yfs.OrderReleaseUpdate.SubServiceName=OrderReleaseUpdate_0
 yfs.ConfirmShipment.SubServiceName=ConfirmShipment_0
+yfs.FanaticsFraudResponse.SubServiceName=FanaticsFraudResponse_0
